2007-12-14  David Zeuthen  <davidz@redhat.com>

	* Makefile.am:
	* client/gdaemonmount.c: (g_daemon_mount_get_uuid),
	(g_daemon_mount_can_eject), (g_daemon_mount_eject),
	(g_daemon_mount_eject_finish), (g_daemon_mount_mount_iface_init):
	* client/gdaemonvolumemonitor.c: (get_volume_for_uuid),
	(get_mount_for_uuid), (g_daemon_volume_monitor_class_init):
	* configure.ac:
	* hal/*: new files

	Update to latest gio API changes and add the HAL backend for
	volume monitoring.

2007-12-14  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * client/gdaemonfileinputstream.c:
        * client/gvfsfusedaemon.c:
        * common/gvfsdaemonprotocol.c:
        * common/gvfsdaemonprotocol.h:
        * daemon/gvfsbackend.h:
        * daemon/gvfsjobsetattribute.c:
        * daemon/gvfsjobsetattribute.h:
        * programs/gvfs-info.c:
        * programs/gvfs-ls.c:
	Update for gio API changes (removal of GFileAttributeValue).

2007-12-14  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * common/gmountsource.c:
        * common/gmountsource.h:
        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendsmb.c:
        * programs/gvfs-info.c:
        * programs/gvfs-monitor-dir.c:
        * programs/gvfs-monitor-file.c:
        * programs/gvfs-mount.c:
        * programs/gvfs-save.c:
        * test/benchmark-gvfs-big-files.c:
        * test/benchmark-gvfs-small-files.c:
	Update to new gio flag enum types/values

2007-12-14  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemondirectorymonitor.c:
        * client/gdaemondirectorymonitor.h:
        * client/gdaemonfile.c:
        * client/gdaemonfile.h:
        * client/gdaemonfileenumerator.c:
        * client/gdaemonfileenumerator.h:
        * client/gdaemonfileinputstream.c:
        * client/gdaemonfileinputstream.h:
        * client/gdaemonfilemonitor.c:
        * client/gdaemonfilemonitor.h:
        * client/gdaemonfileoutputstream.c: